--- a/Gui/src/ActiveTab/Active.ui
+++ b/Gui/src/ActiveTab/Active.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <property name="leftMargin">
     <number>0</number>
@@ -47,7 +50,7 @@
      <item>
       <widget class="Line" name="line_10">
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(170, 170, 127);</string>
+        <string notr="true">background-color:rgb(82, 82, 82);</string>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -79,10 +82,11 @@
          </property>
          <property name="styleSheet">
           <string notr="true">border-style: solid;
-border-color: rgb(159, 159, 119);
+border-color: black;
 border-width: 1px;
-border-radius: 0px;
-selection-background-color:  rgb(177, 177, 133);</string>
+background-color:rgb(82, 82, 82);
+selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:0.7 rgb(143, 143, 107));
+color: rgb(230,230,230);</string>
          </property>
          <item>
           <property name="text">
@@ -133,6 +137,12 @@ selection-background-color:  rgb(177, 177, 133);</string>
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_start">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="minimumSize">
           <size>
            <width>75</width>
@@ -140,7 +150,7 @@ selection-background-color:  rgb(177, 177, 133);</string>
           </size>
          </property>
          <property name="styleSheet">
-          <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+          <string notr="true"/>
          </property>
          <property name="text">
           <string>Start</string>
@@ -149,8 +159,20 @@ selection-background-color:  rgb(177, 177, 133);</string>
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_pause">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>75</width>
+           <height>23</height>
+          </size>
+         </property>
          <property name="styleSheet">
-          <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+          <string notr="true"/>
          </property>
          <property name="text">
           <string>Pause</string>
@@ -172,7 +194,7 @@ selection-background-color:  rgb(177, 177, 133);</string>
           </size>
          </property>
          <property name="styleSheet">
-          <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+          <string notr="true"/>
          </property>
          <property name="text">
           <string>Stop</string>
@@ -184,7 +206,7 @@ selection-background-color:  rgb(177, 177, 133);</string>
      <item>
       <widget class="Line" name="line">
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(170, 170, 127);</string>
+        <string notr="true">background-color:rgb(82, 82, 82);</string>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -204,7 +226,7 @@ selection-background-color:  rgb(177, 177, 133);</string>
         </sizepolicy>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(210, 210, 210);</string>
+        <string notr="true">background-color:rgb(82, 82, 82);</string>
        </property>
        <property name="frameShape">
         <enum>QFrame::Box</enum>
@@ -245,9 +267,10 @@ selection-background-color:  rgb(177, 177, 133);</string>
            </size>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 grey);
+           <string notr="true">background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+color: rgb(230,230,230);
 border-style: solid;
-border-color: black;
+border-color: rgb(50, 50, 50);
 border-width: 1px;
 border-radius: 15px</string>
           </property>
@@ -291,9 +314,10 @@ border-radius: 15px</string>
            </size>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 grey);
+           <string notr="true">background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+color: rgb(230,230,230);
 border-style: solid;
-border-color: black;
+border-color: rgb(50, 50, 50);
 border-width: 1px;
 border-radius: 15px</string>
           </property>
@@ -303,16 +327,6 @@ border-radius: 15px</string>
          </widget>
         </item>
        </layout>
-      </widget>
-     </item>
-     <item>
-      <widget class="Line" name="line_18">
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(170, 170, 127);</string>
-       </property>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
       </widget>
      </item>
     </layout>
@@ -352,7 +366,7 @@ border-radius: 15px</string>
               <enum>Qt::StrongFocus</enum>
              </property>
              <property name="styleSheet">
-              <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+              <string notr="true"/>
              </property>
              <property name="text">
               <string>Clear Output</string>
@@ -380,7 +394,7 @@ border-radius: 15px</string>
               </font>
              </property>
              <property name="styleSheet">
-              <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+              <string notr="true"/>
              </property>
              <property name="text">
               <string>Action &gt;</string>
@@ -391,6 +405,9 @@ border-radius: 15px</string>
          </item>
          <item>
           <widget class="QTabWidget" name="tabWidget_results">
+           <property name="styleSheet">
+            <string notr="true"/>
+           </property>
            <property name="tabPosition">
             <enum>QTabWidget::North</enum>
            </property>
@@ -403,16 +420,16 @@ border-radius: 15px</string>
             </attribute>
             <layout class="QVBoxLayout" name="verticalLayout_23">
              <property name="leftMargin">
-              <number>0</number>
+              <number>6</number>
              </property>
              <property name="topMargin">
-              <number>2</number>
+              <number>6</number>
              </property>
              <property name="rightMargin">
-              <number>0</number>
+              <number>6</number>
              </property>
              <property name="bottomMargin">
-              <number>0</number>
+              <number>6</number>
              </property>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_18">
@@ -462,7 +479,7 @@ border-radius: 15px</string>
                   </font>
                  </property>
                  <property name="styleSheet">
-                  <string notr="true">background-color: rgb(210, 210, 210);</string>
+                  <string notr="true">background-color:rgb(80, 80, 80);</string>
                  </property>
                  <property name="frameShape">
                   <enum>QFrame::Box</enum>
@@ -492,13 +509,7 @@ border-radius: 15px</string>
                 <string/>
                </property>
                <property name="styleSheet">
-                <string notr="true">QWidget#tableView_results{
-background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.1  rgb(246, 255, 199));
-border-style: solid;
-border-color: black;
-border-width: 1px;
-border-radius: 0px;
-}</string>
+                <string notr="true"/>
                </property>
                <property name="editTriggers">
                 <set>QAbstractItemView::DoubleClicked</set>
@@ -572,19 +583,7 @@ border-radius: 0px;
                 </font>
                </property>
                <property name="styleSheet">
-                <string notr="true">QWidget#listWidget_logs{
-background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.1  rgb(246, 255, 199));
-border-style: solid;
-border-color: black;
-border-width: 1px;
-border-radius: 0px;
-}
-QListWidget::item:selected {
-background-color:  rgb(199, 199, 149);
-color: black;}
-QListWidget::item:hover{
-background-color: rgb(230, 230, 172);
-}</string>
+                <string notr="true"/>
                </property>
               </widget>
              </item>
@@ -596,6 +595,9 @@ background-color: rgb(230, 230, 172);
        </item>
        <item>
         <widget class="Line" name="line_17">
+         <property name="styleSheet">
+          <string notr="true">background-color:rgb(82, 82, 82);</string>
+         </property>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
@@ -607,6 +609,9 @@ background-color: rgb(230, 230, 172);
       <layout class="QHBoxLayout" name="horizontalLayout_19">
        <item>
         <widget class="Line" name="line_7">
+         <property name="styleSheet">
+          <string notr="true">background-color:rgb(82, 82, 82);</string>
+         </property>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
@@ -678,7 +683,7 @@ background-color: rgb(230, 230, 172);
                </font>
               </property>
               <property name="styleSheet">
-               <string notr="true">background-color: rgb(210, 210, 210);</string>
+               <string notr="true">background-color:rgb(80, 80, 80);</string>
               </property>
               <property name="frameShape">
                <enum>QFrame::Box</enum>
@@ -720,19 +725,7 @@ background-color: rgb(230, 230, 172);
                </font>
               </property>
               <property name="styleSheet">
-               <string notr="true">QWidget#listWidget_targets{
-background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.1  rgb(246, 255, 199));
-border-style: solid;
-border-color: black;
-border-width: 1px;
-border-radius: 0px;
-}
-QListWidget::item:selected {
-background-color:  rgb(199, 199, 149);
-color: black;}
-QListWidget::item:hover{
-background-color: rgb(230, 230, 172);
-}</string>
+               <string notr="true"/>
               </property>
               <property name="editTriggers">
                <set>QAbstractItemView::NoEditTriggers</set>
@@ -753,6 +746,9 @@ background-color: rgb(230, 230, 172);
             </item>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_26">
+              <property name="spacing">
+               <number>3</number>
+              </property>
               <item>
                <widget class="QPushButton" name="pushButton_removeTargets">
                 <property name="minimumSize">
@@ -762,7 +758,7 @@ background-color: rgb(230, 230, 172);
                  </size>
                 </property>
                 <property name="styleSheet">
-                 <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+                 <string notr="true"/>
                 </property>
                 <property name="text">
                  <string>Remove</string>
@@ -784,7 +780,7 @@ background-color: rgb(230, 230, 172);
                  </size>
                 </property>
                 <property name="styleSheet">
-                 <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+                 <string notr="true"/>
                 </property>
                 <property name="text">
                  <string>Clear</string>
@@ -806,7 +802,7 @@ background-color: rgb(230, 230, 172);
                  </size>
                 </property>
                 <property name="styleSheet">
-                 <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+                 <string notr="true"/>
                 </property>
                 <property name="text">
                  <string>Load</string>
@@ -835,7 +831,7 @@ background-color: rgb(230, 230, 172);
             <item>
              <widget class="QLineEdit" name="lineEdit_targets">
               <property name="styleSheet">
-               <string notr="true">background-color: rgb(255, 255, 255);</string>
+               <string notr="true"/>
               </property>
              </widget>
             </item>
@@ -854,7 +850,7 @@ background-color: rgb(230, 230, 172);
                </size>
               </property>
               <property name="styleSheet">
-               <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+               <string notr="true"/>
               </property>
               <property name="text">
                <string>Add</string>
@@ -885,15 +881,7 @@ background-color: rgb(230, 230, 172);
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">QProgressBar::chunk {
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));
-}
-
-QProgressBar {
-    border: 1px solid black;
-    /*border-radius: 5px;*/
-    text-align: center;
-}</string>
+      <string notr="true"/>
      </property>
      <property name="value">
       <number>0</number>
