--- a/Gui/src/BruteTab/BruteConfigDialog.ui
+++ b/Gui/src/BruteTab/BruteConfigDialog.ui
@@ -53,7 +53,7 @@
      <item>
       <widget class="Line" name="line">
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(170, 170, 127);</string>
+        <string notr="true">background-color:rgb(82, 82, 82);</string>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -65,7 +65,7 @@
    <item>
     <widget class="QFrame" name="frame">
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(210, 210, 210);</string>
+      <string notr="true">background-color:rgb(82, 82, 82);</string>
      </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
@@ -132,7 +132,7 @@
            </size>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color: rgb(255, 255, 255);</string>
+           <string notr="true"/>
           </property>
           <property name="maxLength">
            <number>3</number>
@@ -322,7 +322,7 @@
    <item>
     <widget class="QFrame" name="frame_nameservers">
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(210, 210, 210);</string>
+      <string notr="true">background-color:rgb(82, 82, 82);</string>
      </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
@@ -372,19 +372,7 @@
              </size>
             </property>
             <property name="styleSheet">
-             <string notr="true">QWidget#listWidget_nameservers{
-background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.1  rgb(246, 255, 199));
-border-style: solid;
-border-color: black;
-border-width: 1px;
-border-radius: 0px;
-}
-QListWidget::item:selected {
-background-color:  rgb(199, 199, 149);
-color: black;}
-QListWidget::item:hover{
-background-color: rgb(230, 230, 172);
-}</string>
+             <string notr="true"/>
             </property>
             <property name="selectionMode">
              <enum>QAbstractItemView::ExtendedSelection</enum>
@@ -407,6 +395,12 @@ background-color: rgb(230, 230, 172);
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="minimumSize">
+               <size>
+                <width>75</width>
+                <height>23</height>
+               </size>
+              </property>
               <property name="maximumSize">
                <size>
                 <width>75</width>
@@ -414,7 +408,7 @@ background-color: rgb(230, 230, 172);
                </size>
               </property>
               <property name="styleSheet">
-               <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 grey);</string>
+               <string notr="true"/>
               </property>
               <property name="text">
                <string>Clear</string>
@@ -429,6 +423,12 @@ background-color: rgb(230, 230, 172);
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="minimumSize">
+               <size>
+                <width>75</width>
+                <height>23</height>
+               </size>
+              </property>
               <property name="maximumSize">
                <size>
                 <width>75</width>
@@ -436,7 +436,7 @@ background-color: rgb(230, 230, 172);
                </size>
               </property>
               <property name="styleSheet">
-               <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 grey);</string>
+               <string notr="true"/>
               </property>
               <property name="text">
                <string>Remove</string>
@@ -451,6 +451,12 @@ background-color: rgb(230, 230, 172);
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="minimumSize">
+               <size>
+                <width>75</width>
+                <height>23</height>
+               </size>
+              </property>
               <property name="maximumSize">
                <size>
                 <width>75</width>
@@ -458,7 +464,7 @@ background-color: rgb(230, 230, 172);
                </size>
               </property>
               <property name="styleSheet">
-               <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 grey);</string>
+               <string notr="true"/>
               </property>
               <property name="text">
                <string>Load</string>
@@ -493,7 +499,7 @@ background-color: rgb(230, 230, 172);
              </size>
             </property>
             <property name="styleSheet">
-             <string notr="true">background-color: rgb(255, 255, 255);</string>
+             <string notr="true"/>
             </property>
            </widget>
           </item>
@@ -505,6 +511,12 @@ background-color: rgb(230, 230, 172);
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="minimumSize">
+             <size>
+              <width>75</width>
+              <height>23</height>
+             </size>
+            </property>
             <property name="maximumSize">
              <size>
               <width>75</width>
@@ -512,7 +524,7 @@ background-color: rgb(230, 230, 172);
              </size>
             </property>
             <property name="styleSheet">
-             <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 grey);</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Add</string>
@@ -531,7 +543,7 @@ background-color: rgb(230, 230, 172);
      <item>
       <widget class="Line" name="line_9">
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(170, 170, 127);</string>
+        <string notr="true">background-color:rgb(82, 82, 82);</string>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -543,7 +555,7 @@ background-color: rgb(230, 230, 172);
        <item>
         <widget class="QPushButton" name="pushButton_cancel">
          <property name="styleSheet">
-          <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+          <string notr="true"/>
          </property>
          <property name="text">
           <string>Cancel</string>
@@ -553,7 +565,7 @@ background-color: rgb(230, 230, 172);
        <item>
         <widget class="QPushButton" name="pushButton_ok">
          <property name="styleSheet">
-          <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+          <string notr="true"/>
          </property>
          <property name="text">
           <string>OK</string>
