--- a/Gui/src/MainWindow.ui
+++ b/Gui/src/MainWindow.ui
@@ -26,7 +26,301 @@
    <string>Sub Suite</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(235, 235, 235);</string>
+   <string notr="true">QScrollBar:vertical{
+background-color:rgb(82, 82, 82);
+width: 15px;
+}
+
+QScrollBar:horizontal{
+background-color:rgb(82, 82, 82);
+height: 15px;
+}
+
+QScollBar::sub-page{
+background: transparent;
+}
+
+QDialog{
+background-color: rgb(115,115,115);
+}
+
+QRadioButton{
+color: rgb(230,230,230);
+}
+
+QSplitter::handle:horizontal {
+background-color:rgb(101,101,101);
+width: 10px;
+}
+
+QAbstractScrollArea{
+background-color:rgb(82, 82, 82);
+}
+
+QTableView{
+selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+background-color:rgb(82, 82, 82);
+color: rgb(230,230,230);
+border-style: solid;
+border-color: black;
+border-width: 1px;
+}
+
+QHeaderView::section{
+background-color: grey;
+border-style: solid;
+border-color: rgb(82, 82, 82);
+border-width: 1px;
+}
+
+QTreeView{
+selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+background-color:rgb(82, 82, 82);
+color: rgb(230,230,230);
+border-style: solid;
+border-color: black;
+border-width: 1px;
+}
+
+QListWidget{
+selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+background-color:rgb(82, 82, 82);
+color: rgb(230,230,230);
+border-style: solid;
+border-color: black;
+border-width: 1px;
+}
+
+QListWidget::item:selected {
+background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+}
+
+QListWidget::item:hover{
+background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+}
+
+QComboBox{
+	border-style: outset;
+	border-width: 2px;
+	border-top-color: qlineargradient(spread:pad, x1:0.5, y1:0.6, x2:0.5, y2:0.4, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-right-color: qlineargradient(spread:pad, x1:0.4, y1:0.5, x2:0.6, y2:0.5, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-left-color: qlineargradient(spread:pad, x1:0.6, y1:0.5, x2:0.4, y2:0.5, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-bottom-color: rgb(58, 58, 58);
+	border-bottom-width: 1px;
+	border-style: solid;
+	color: rgb(230,230,230);
+	padding: 2px;
+	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgba(97, 97, 97, 255));
+	selection-background-color:  rgb(177, 177, 133);
+}
+
+QMainWindow {
+	background-color:rgb(82, 82, 82);
+}
+QTextEdit {
+	background-color:rgb(42, 42, 42);
+	color: rgb(0, 255, 0);
+}
+QPushButton{
+	border-style: outset;
+	border-width: 2px;
+	border-top-color: qlineargradient(spread:pad, x1:0.5, y1:0.6, x2:0.5, y2:0.4, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-right-color: qlineargradient(spread:pad, x1:0.4, y1:0.5, x2:0.6, y2:0.5, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-left-color: qlineargradient(spread:pad, x1:0.6, y1:0.5, x2:0.4, y2:0.5, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-bottom-color: rgb(58, 58, 58);
+	border-bottom-width: 1px;
+	border-style: solid;
+	color: rgb(230,230,230);
+	padding: 2px;
+	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgba(97, 97, 97, 255));
+}
+
+QPushButton:hover{
+	border-style: outset;
+	border-width: 2px;
+	border-top-color: qlineargradient(spread:pad, x1:0.5, y1:0.6, x2:0.5, y2:0.4, stop:0 rgba(180, 180, 180, 255), stop:1 rgba(110, 110, 110, 255));
+	border-right-color: qlineargradient(spread:pad, x1:0.4, y1:0.5, x2:0.6, y2:0.5, stop:0 rgba(180, 180, 180, 255), stop:1 rgba(110, 110, 110, 255));
+	border-left-color: qlineargradient(spread:pad, x1:0.6, y1:0.5, x2:0.4, y2:0.5, stop:0 rgba(180, 180, 180, 255), stop:1 rgba(110, 110, 110, 255));
+	border-bottom-color: rgb(115, 115, 115);
+	border-bottom-width: 1px;
+	border-style: solid;
+	color: rgb(255, 255, 255);
+	padding: 2px;
+	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+}
+
+QPushButton:pressed{
+	border-style: outset;
+	border-width: 2px;
+	border-top-color: qlineargradient(spread:pad, x1:0.5, y1:0.6, x2:0.5, y2:0.4, stop:0 rgba(62, 62, 62, 255), stop:1 rgba(22, 22, 22, 255));
+	border-right-color: qlineargradient(spread:pad, x1:0.4, y1:0.5, x2:0.6, y2:0.5, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-left-color: qlineargradient(spread:pad, x1:0.6, y1:0.5, x2:0.4, y2:0.5, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-bottom-color: rgb(58, 58, 58);
+	border-bottom-width: 1px;
+	border-style: solid;
+	color: rgb(255, 255, 255);
+	padding: 2px;
+	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgba(97, 97, 97, 255));
+}
+QPushButton:disabled{
+	border-style: outset;
+	border-width: 2px;
+	border-top-color: qlineargradient(spread:pad, x1:0.5, y1:0.6, x2:0.5, y2:0.4, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-right-color: qlineargradient(spread:pad, x1:0.4, y1:0.5, x2:0.6, y2:0.5, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-left-color: qlineargradient(spread:pad, x1:0.6, y1:0.5, x2:0.4, y2:0.5, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-bottom-color: rgb(58, 58, 58);
+	border-bottom-width: 1px;
+	border-style: solid;
+	color: rgb(0, 0, 0);
+	padding: 2px;
+	color: grey;
+	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(77, 77, 77, 255));
+}
+QLineEdit {
+	border-width: 1px; border-radius: 4px;
+	border-color: rgb(58, 58, 58);
+	border-style: inset;
+	padding: 0 8px;
+	color: rgb(255, 255, 255);
+	background-color:rgb(82, 82, 82);
+	selection-background-color: rgb(187, 187, 187);
+	selection-color: rgb(60, 63, 65);
+}
+QLabel {
+	color:rgb(0,0,0);	
+}
+QProgressBar {
+	text-align: center;
+	color: rgb(0,0,0);
+	border-width: 1px; 
+	border-radius: 10px;
+	border-color: rgb(58, 58, 58);
+	border-style: inset;
+	background-color:rgb(77,77,77);
+}
+
+QProgressBar::chunk {
+background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:0.6 rgb(143, 143, 107));
+}
+
+QMenuBar {
+	background: rgb(82, 82, 82);
+}
+
+QMenu{
+	background-color:rgb(82,82,82);
+}
+
+QMenuBar::item {
+	color:rgb(223,219,210);
+	spacing: 3px;
+	padding: 1px 4px;
+	background: transparent;
+}
+
+QMenuBar::item:selected {
+	background:rgb(115, 115, 115);
+}
+
+QMenu::item:selected {
+	color:rgb(255,255,255);
+	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+}
+
+QMenu::​separator{
+background-color: rgb(0, 0, 0);
+}
+
+QMenu::item {
+	color:rgb(223,219,210);
+	background-color:rgb(82,82,82);
+	padding-left:20px;
+	padding-top:4px;
+	padding-bottom:4px;
+	padding-right:10px;
+}
+
+QTabWidget::tab-bar {
+left: 10px;
+}
+
+QTabWidget {
+	color:rgb(0,0,0);
+	background-color:rgb(247,246,246);
+}
+QTabWidget::pane {
+		border-color: grey;
+		background-color:rgb(101,101,101);
+		border-style: solid;
+		border-width: 1px;
+}
+QTabBar::tab {
+height: 16px;
+width: 50px;
+	padding: 1px;
+	color:rgb(250,250,250);
+  	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgba(97, 97, 97, 255));
+	border-style: solid;
+	border-width: 1px;
+	border-color: grey;
+}
+
+QTabBar::tab:hover{
+background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+margin-top: 0px;
+margin-left: 0px;
+margin-right: 1px;
+}
+
+QTabBar::tab:selected {
+background-color: grey;
+color: rgb(50,50,50);
+margin-top: 0px;
+margin-left: 0px;
+margin-right: 1px;
+}
+
+QtabBar::tab:!selected{
+margin-top: 1px;
+margin-right: 1px;
+}
+
+QCheckBox {
+	color: rgb(230,230,230);
+	padding: 2px;
+}
+QCheckBox:hover {
+	border-style:solid;
+	padding-left: 1px;
+	padding-right: 1px;
+	padding-bottom: 1px;
+	padding-top: 1px;
+	border-width:1px;
+	border-color: rgb(87, 97, 106);
+background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+}
+
+QCheckBox::indicator:checked {
+	border-style:solid;
+	border-width:1px;
+	border-color: rgb(180,180,180);
+background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+}
+
+QCheckBox::indicator:unchecked {
+	border-style:solid;
+	border-width:1px;
+	border-color: rgb(87, 97, 106);
+  	background-color: rgb(230,230,230);
+}
+
+QToolButton{
+background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 black);
+border-style: solid;
+border-color: black;
+border-width: 1px;
+border-radius: 15px
+}</string>
   </property>
   <property name="iconSize">
    <size>
@@ -35,9 +329,6 @@
    </size>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <property name="spacing">
      <number>3</number>
@@ -65,35 +356,12 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">/*QTabWidget::pane {
-border-top: 5px solid rgb(152, 152, 152);
-border-bottom: 5px solid rgb(152, 152, 152);
-}
-*/
-QTabWidget::tab-bar {
-left: 10px;
-}
-QTabBar::tab:hover{
-background-color: rgb(220, 220, 220);
-}
-QTabBar::tab:selected {
-color: rgb(141, 141, 106);
-}</string>
+       <string notr="true"/>
       </property>
      </widget>
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="Line" name="line">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(170, 170, 127);</string>
-        </property>
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-       </widget>
-      </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <property name="spacing">
@@ -117,7 +385,7 @@ color: rgb(141, 141, 106);
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color: rgb(210, 210, 210);</string>
+           <string notr="true">background-color:rgb(80, 80, 80);</string>
           </property>
           <property name="frameShape">
            <enum>QFrame::Panel</enum>
@@ -148,7 +416,7 @@ color: rgb(141, 141, 106);
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color: rgb(210, 210, 210);</string>
+           <string notr="true">background-color:rgb(80, 80, 80);</string>
           </property>
           <property name="frameShape">
            <enum>QFrame::Panel</enum>
@@ -176,7 +444,7 @@ color: rgb(141, 141, 106);
      <x>0</x>
      <y>0</y>
      <width>1000</width>
-     <height>21</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menufile">
