--- a/Gui/src/SaveTab/Save.ui
+++ b/Gui/src/SaveTab/Save.ui
@@ -14,8 +14,7 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(235, 235, 235);
-</string>
+   <string notr="true"/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <property name="leftMargin">
@@ -54,7 +53,7 @@
         </sizepolicy>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(170, 170, 127);</string>
+        <string notr="true">background-color:rgb(80, 80, 80);</string>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -66,137 +65,139 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_5">
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_5">
-       <item>
-        <widget class="QRadioButton" name="radioButton_getAll_Save">
-         <property name="text">
-          <string>Get all Enumeration Results</string>
-         </property>
-         <property name="checked">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QRadioButton" name="radioButton_getFrom_Save">
-         <property name="text">
-          <string>Get Enumeration Results From</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QComboBox" name="comboBox_get_Save">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>90</width>
-           <height>19</height>
-          </size>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 1 rgb(215, 215, 215));
-border-style: solid;
+      <widget class="QFrame" name="">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color:rgb(80, 80, 80);</string>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
+        <item>
+         <widget class="QRadioButton" name="radioButton_getAll_Save">
+          <property name="text">
+           <string>Get all Enumeration Results</string>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioButton_getFrom_Save">
+          <property name="text">
+           <string>Get Enumeration Results From</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="comboBox_get_Save">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>90</width>
+            <height>19</height>
+           </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">border-style: solid;
 border-color: black;
 border-width: 1px;
-border-radius: 0px;
-</string>
-         </property>
-         <item>
-          <property name="text">
-           <string>Osint</string>
+color: white;
+background-color:rgb(82, 82, 82);
+selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:0.7 rgba(143, 143, 107));</string>
           </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>subBrute</string>
+          <item>
+           <property name="text">
+            <string>Osint</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>subBrute</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>tldBrute</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>infoBrute</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>active</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="toolButton_get_Save">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
           </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>tldBrute</string>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>19</height>
+           </size>
           </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>infoBrute</string>
+          <property name="maximumSize">
+           <size>
+            <width>200</width>
+            <height>16777215</height>
+           </size>
           </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>active</string>
+          <property name="toolTip">
+           <string/>
           </property>
-         </item>
-        </widget>
-       </item>
-       <item>
-        <widget class="QToolButton" name="toolButton_get_Save">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>19</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>200</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="toolTip">
-          <string/>
-         </property>
-         <property name="toolTipDuration">
-          <number>-1</number>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 grey);
+          <property name="toolTipDuration">
+           <number>-1</number>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
+color: rgb(230,230,230);
 border-style: solid;
-border-color: black;
+border-color: rgb(50, 50, 50);
 border-width: 1px;
 border-radius: 15px</string>
-         </property>
-         <property name="text">
-          <string>Get...</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>68</width>
-           <height>17</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <widget class="Line" name="line_4">
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(170, 170, 127);</string>
-       </property>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
+          </property>
+          <property name="text">
+           <string>Get...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>68</width>
+            <height>17</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
       </widget>
      </item>
     </layout>
@@ -234,7 +235,7 @@ border-radius: 15px</string>
               </font>
              </property>
              <property name="styleSheet">
-              <string notr="true">background-color: rgb(210, 210, 210);</string>
+              <string notr="true">background-color:rgb(80, 80, 80);</string>
              </property>
              <property name="frameShape">
               <enum>QFrame::Box</enum>
@@ -276,16 +277,7 @@ border-radius: 15px</string>
               </font>
              </property>
              <property name="styleSheet">
-              <string notr="true">QWidget#listWidget_results_Save{
-background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.1  rgb(246, 255, 199));
-border-style: solid;
-border-color: black;
-border-width: 1px;
-border-radius: 0px;
-}
-QListWidget::item:selected {
-background-color:  rgb(199, 199, 149);
-color: black;}</string>
+              <string notr="true"/>
              </property>
              <property name="selectionMode">
               <enum>QAbstractItemView::MultiSelection</enum>
@@ -297,6 +289,9 @@ color: black;}</string>
            </item>
            <item>
             <layout class="QVBoxLayout" name="verticalLayout_11">
+             <property name="spacing">
+              <number>3</number>
+             </property>
              <item>
               <widget class="QPushButton" name="pushButton_sort_Save">
                <property name="sizePolicy">
@@ -318,7 +313,7 @@ color: black;}</string>
                 </size>
                </property>
                <property name="styleSheet">
-                <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+                <string notr="true"/>
                </property>
                <property name="text">
                 <string>Sort</string>
@@ -340,7 +335,7 @@ color: black;}</string>
                 </size>
                </property>
                <property name="styleSheet">
-                <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+                <string notr="true"/>
                </property>
                <property name="text">
                 <string>Remove</string>
@@ -362,7 +357,7 @@ color: black;}</string>
                 </size>
                </property>
                <property name="styleSheet">
-                <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+                <string notr="true"/>
                </property>
                <property name="text">
                 <string>Clear</string>
@@ -384,7 +379,7 @@ color: black;}</string>
                 </size>
                </property>
                <property name="styleSheet">
-                <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+                <string notr="true"/>
                </property>
                <property name="text">
                 <string>Load</string>
@@ -419,7 +414,7 @@ color: black;}</string>
                 </size>
                </property>
                <property name="styleSheet">
-                <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+                <string notr="true"/>
                </property>
                <property name="text">
                 <string>Back</string>
@@ -447,12 +442,12 @@ color: black;}</string>
               </font>
              </property>
              <property name="styleSheet">
-              <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 1 rgb(215, 215, 215));
-border-style: solid;
+              <string notr="true">border-style: solid;
 border-color: black;
 border-width: 1px;
-border-radius: 0px;
-</string>
+color: white;
+background-color:rgb(82, 82, 82);
+selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:0.7 rgba(143, 143, 107));</string>
              </property>
              <property name="currentIndex">
               <number>2</number>
@@ -483,7 +478,7 @@ border-radius: 0px;
            <item>
             <widget class="QLineEdit" name="lineEdit_filter_Save">
              <property name="styleSheet">
-              <string notr="true">background-color: rgb(255, 255, 255);</string>
+              <string notr="true"/>
              </property>
             </widget>
            </item>
@@ -502,7 +497,7 @@ border-radius: 0px;
               </size>
              </property>
              <property name="styleSheet">
-              <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+              <string notr="true"/>
              </property>
              <property name="text">
               <string>Filter</string>
@@ -515,6 +510,9 @@ border-radius: 0px;
        </item>
        <item>
         <widget class="Line" name="line">
+         <property name="styleSheet">
+          <string notr="true">background-color:rgb(80, 80, 80);</string>
+         </property>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
@@ -526,6 +524,9 @@ border-radius: 0px;
       <layout class="QHBoxLayout" name="horizontalLayout_13">
        <item>
         <widget class="Line" name="line_6">
+         <property name="styleSheet">
+          <string notr="true">background-color:rgb(80, 80, 80);</string>
+         </property>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
@@ -600,12 +601,12 @@ border-radius: 0px;
               </size>
              </property>
              <property name="styleSheet">
-              <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 1 rgb(215, 215, 215));
-border-style: solid;
+              <string notr="true">border-style: solid;
 border-color: black;
 border-width: 1px;
-border-radius: 0px;
-</string>
+color: white;
+background-color:rgb(82, 82, 82);
+selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:0.7 rgba(143, 143, 107));</string>
              </property>
              <item>
               <property name="text">
@@ -654,7 +655,7 @@ border-radius: 0px;
               </size>
              </property>
              <property name="styleSheet">
-              <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+              <string notr="true"/>
              </property>
              <property name="text">
               <string>Save</string>
